<resources>
    <string name="app_name">LoLStatistics</string>
    <string name="txtTitulo">LoLStatistics</string>
    <string name="txtSite">Site Download</string>
    <string name="txtCanal">Canal</string>
    <string name="chNavegador">Escolha</string>
    <string name="txtLocal">Localização</string>
    <string name="txtCad">Cadastro</string>
    <string name="txtButton">Cadastrar</string>
    <string name="txtCadNome">Nome</string>
    <string name="txtCadEmail">Email</string>
    <string name="txtCadSenha">Senha</string>
    <string name="txtFeedMens">Mensagem</string>
    <string name="txtfeed">Avalie-nos</string>
    <string name="txtButtonFeed">Enviar</string>
    <string name="txtFeed">FeedBack</string>


    <string name="txtRota">Rotas:</string>

    <string name="txtBuildsRecomendadas">Builds Recomendadas</string>

    <string name="txtAatrox">Aatrox</string>
    <string name="txtDescAatrox">A ESPADA DARKIN</string>

    <string name="txtAhri">Ahri</string>
    <string name="txtDescAhri">A RAPOSA DE NOVE CAUDAS</string>

    <string name="txtAkali">Akali</string>
    <string name="txtDescAkali">A ASSASSINA RENEGADA</string>

    <string name="txtAkshan">Akshan</string>
    <string name="txtDescAkshan">O SENTINELA REBELDE </string>

    <string name="txtAlistar">Alistar</string>
    <string name="txtDescAlistar">O MINOTAURO</string>

    <string name="txtAmumu">Amumu</string>
    <string name="txtAnivia">Anivia</string>
    <string name="txtAnnie">Annie</string>
    <string name="txtAphelios">Aphelios</string>
    <string name="txtAshe">Ashe</string>
    <string name="todo">TODO</string>
    <string name="txtvolta">Volta</string>
</resources>
